[gd_scene load_steps=4 format=2]

[ext_resource path="res://Art/Ingredients/Muckshroom.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Radial_Button.gd" type="Script" id=2]
[ext_resource path="res://Art/Fonts/m5x7.tres" type="DynamicFont" id=3]

[node name="Radial_Button" type="TextureButton"]
rect_min_size = Vector2( 8, 8 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_Sprite" type="Sprite" parent="."]
position = Vector2( 4, 4 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="Button_Sprite"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -62.0
margin_top = -14.0
margin_right = 38.0
custom_fonts/font = ExtResource( 3 )
text = "AAAAA@"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[connection signal="mouse_entered" from="." to="." method="_on_Radial_Button_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Radial_Button_mouse_exited"]
